// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fails with empty answers 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isString": "each value in answers must be a string",
    },
    "property": "answers",
    "target": Request {
      "answers": null,
      "email": "mihau@gmail.com",
    },
    "value": null,
  },
]
`;

exports[`fails with incorrect email 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isEmail": "email must be an email",
    },
    "property": "email",
    "target": Request {
      "email": "mihaugmail.com",
    },
    "value": "mihaugmail.com",
  },
]
`;

exports[`fails with incorrect email 2`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isEmail": "email must be an email",
    },
    "property": "email",
    "target": Request {
      "email": "mihaugmail.com",
    },
    "value": "mihaugmail.com",
  },
]
`;

exports[`fails without email 1`] = `
Array [
  ValidationError {
    "children": Array [],
    "constraints": Object {
      "isEmail": "email must be an email",
      "isString": "email must be a string",
    },
    "property": "email",
    "target": Request {
      "email": null,
    },
    "value": null,
  },
]
`;
